--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@ body {
   align-items: center;
   height: 100vh;
   background-color: #fdfd96;
+  overflow: hidden;
 }
 
 .circle-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
   padding-top: 100px;
   border-radius: 50%;
 }
@@ -74,7 +75,7 @@ body {
 
 .text-description {
   position: absolute;
-  top: 0;
+  top: -100%;
   left: 100%;
   padding: 7px;
   background-color: #000;
@@ -108,138 +109,145 @@ body {
 
 #bubble1 {
   background-color: #b2fba5;
-  transform: translate(0, -200px) rotate(0deg);
+  /*0, -200px*/
+  transform: translate(-400px,-150px) rotate(0deg);
   --nb_res: 5;
 }
 
 #epflcourses {
+  --i: 0;
   background-color: #b2fba5;
-  --xcoord: calc(cos(90deg)*var(--distance));
-  --ycoord: calc(-1*sin(90deg)*var(--distance));
-  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Fresque {
+  --i: 1;
   background-color: #b2fba5;
-  --xcoord: calc(cos(60deg)*var(--distance));
-  --ycoord: calc(-1*sin(60deg)*var(--distance));
-  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg);
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #CSAW {
+  --i: 2;
   background-color: #b2fba5;
-  --xcoord: calc(cos(30deg)*var(--distance));
-  --ycoord: calc(-1*sin(30deg)*var(--distance));
-  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg);
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Semaine {
+  --i: 3;
   background-color: #b2fba5;
-  --xcoord: calc(cos(120deg)*var(--distance));
-  --ycoord: calc(-1*sin(120deg)*var(--distance));
-  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg);
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Canard {
+  --i: 4;
   background-color: #b2fba5;
-  --xcoord: calc(cos(150deg)*var(--distance));
-  --ycoord: calc(-1*sin(150deg)*var(--distance));
-  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg);
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 /*Second category*/
 
 #bubble2 {
   background-color: #a6e999;
-  transform: translate(190.21px, -61.80px) rotate(0deg);
+  /*190.21px, -61.80px*/
+  transform: translate(-200px, 100px) rotate(0deg);
   --nb_res: 11;
 }
 
 #Debouches {
   --i: 0;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
 #Carriere {
   --i: 1;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
 #Velo {
   --i: 2;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Fix {
   --i: 3;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Smart {
   --i: 4;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Biblio {
   --i: 5;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Meubleco {
   --i: 6;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Vorace {
   --i: 7;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Castor {
   --i: 8;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Marche {
   --i: 9;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Coaching {
   --i: 10;
   background-color: #a6e999;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
@@ -247,95 +255,96 @@ body {
 
 #bubble3 {
   background-color: #99d88e;
-  transform: translate(-190.21px, -61.80px) rotate(0deg);
+  /*-190.21px, -61.80px*/
+  transform: translate(0,-150px) rotate(0deg);
   --nb_res: 11;
 }
 
 #Convergeance {
   --i: 0;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Zero {
   --i: 1;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Ingenieur {
   --i: 2;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Unipoly {
   --i: 3;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Polyquity {
   --i: 4;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Planqueer {
   --i: 5;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Queermanence {
   --i: 6;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Amnesty {
   --i: 7;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #EVA {
   --i: 8;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Bassenges {
   --i: 9;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #UPFL {
   --i: 10;
   background-color: #99d88e;
-  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
-  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
@@ -343,42 +352,48 @@ body {
 
 #bubble4 {
   background-color: #8dc682;
-  transform: translate(-117.56px, 161.80px) rotate(0deg);
+  /*-117.56px, 161.80px*/
+  transform: translate(200px,100px) rotate(0deg);
   --nb_res: 5;
 }
 
 #Make {
+  --i: 0;
   background-color: #8dc682;
-  --xcoord: calc(cos(150deg)*var(--distance));
-  --ycoord: calc(-1*sin(150deg)*var(--distance));
-  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Durabilis {
+  --i: 1;
   background-color: #8dc682;
-  --xcoord: calc(cos(180deg)*var(--distance));
-  --ycoord: calc(-1*sin(180deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
 #Skil {
+  --i: 2;
   background-color: #8dc682;
-  --xcoord: calc(cos(210deg)*var(--distance));
-  --ycoord: calc(-1*sin(210deg)*var(--distance));
-  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Changemakers {
+  --i: 3;
   background-color: #8dc682;
-  --xcoord: calc(cos(240deg)*var(--distance));
-  --ycoord: calc(-1*sin(240deg)*var(--distance));
-  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Ucreate {
+  --i: 4;
   background-color: #8dc682;
-  --xcoord: calc(cos(270deg)*var(--distance));
-  --ycoord: calc(-1*sin(270deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
@@ -386,41 +401,47 @@ body {
 
 #bubble5 {
   background-color: #80b577;
-  transform: translate(117.56px, 161.80px) rotate(0deg);
+  /*117.56px, 161.80px*/
+  transform: translate(400px,-150px) rotate(0deg);
   --nb_res: 5;
 }
 
 #Sports {
+  --i: 0;
   background-color: #80b577;
-  --xcoord: calc(cos(30deg)*var(--distance));
-  --ycoord: calc(-1*sin(30deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
 #Transition {
+  --i: 1;
   background-color: #80b577;
-  --xcoord: calc(cos(0deg)*var(--distance));
-  --ycoord: calc(-1*sin(0deg)*var(--distance));
-  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #TSN {
+  --i: 2;
   background-color: #80b577;
-  --xcoord: calc(cos(-30deg)*var(--distance));
-  --ycoord: calc(-1*sin(-30deg)*var(--distance));
-  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Meditation {
+  --i: 3;
   background-color: #80b577;
-  --xcoord: calc(cos(-60deg)*var(--distance));
-  --ycoord: calc(-1*sin(-60deg)*var(--distance));
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
   transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
 #Forest {
+  --i: 4;
   background-color: #80b577;
-  --xcoord: calc(cos(-90deg)*var(--distance));
-  --ycoord: calc(-1*sin(-90deg)*var(--distance));
-  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res) + 90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
