--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ body {
 }
 
 .smaller {
-  max-width: 50px;
-  max-height: 50px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -93,7 +93,7 @@ body {
 
 #bubble1 {
   background-color: #ffd180;
-  transform: translate(-400px,-100px) rotate(0deg);
+  transform: translate(-400px,-125px) rotate(0deg);
   --nb_res: 5;
 }
 
@@ -146,7 +146,7 @@ body {
 
 #bubble2 {
   background-color: #ff914d;
-  transform: translate(-200px, 150px) rotate(0deg);
+  transform: translate(-200px, 125px) rotate(0deg);
   --nb_res: 11;
 }
 
@@ -247,12 +247,12 @@ body {
 
 #bubble3 {
   background-color: #c6d101;
-  transform: translate(0,-100px) rotate(0deg);
+  transform: translate(0,-125px) rotate(0deg);
   --nb_res: 11;
 }
 
 #bubble3 .text-description {
-  top: -100%;
+  top: 0%;
   left: 100%;
 }
 
@@ -348,7 +348,7 @@ body {
 
 #bubble4 {
   background-color: #fac8d0;
-  transform: translate(200px,150px) rotate(0deg);
+  transform: translate(200px,125px) rotate(0deg);
   --nb_res: 5;
 }
 
@@ -401,7 +401,7 @@ body {
 
 #bubble5 {
   background-color: #95f823;
-  transform: translate(400px,-100px) rotate(0deg);
+  transform: translate(400px,-125px) rotate(0deg);
   --nb_res: 5;
 }
 
