--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
+  background-image: url("logo/background_picture.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #10bcf6b7;
   overflow: hidden;
 }
 
